# minecraft-server-manager

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  settings.rs  ssh.rs  versions.rs
src-tauri/src/commands/: mod.rs  profiles.rs  settings.rs  ssh.rs  versions.rs
src/lib/: ipc.ts
src/pages/: ConnectionPage.tsx  DashboardPage.tsx
src/pages/panels/: VersionPanel.tsx
src/types/: connection.ts
